FlightPath 4.x Changelog
========================
   
2013-05-02
  Fixed bug in system module which was causing "system forms" to not accept
  form values which had been modified by a form's hook_validate function.
     
  Created new hook:  hook_exit().  Called last as FlightPath is shutting down, at the end
  of index.php
   
2013-04-26
  Added programming to the example_helper module which ships with FlightPath,
  to better demonstrate basic module development.
  
  Fixed bug in format_date, where it was not handling non-integer values gracefully.
  
  Tweaked update_status.module to state if Cron has never been run before.
     
   
2013-03-14
  Modified a query in student_search module, to not give warning when attempting
  to search by major code (major=CODE hack).


2013-03-13
  Changed the form which sends an email when someone clicks the "Contact link" to not
  specify the "From" address.  This was causing some email clients to flag the email
  as spam.
    

----------------
RELEASED 4.0-rc4
----------------

2013-03-11
  Fixed bug in update_status module, where it always reported FP needed updating.
  
  Modified system module's hook_status to report FP's version number
  
  Fixed bug in system.install, where student_transfer_courses table's primary key
  wasn't set up correctly.


2013-03-10
  Adding a hook_status hook, and page to view system status information.
  
  Modified invoke_hook() function to return possible results of invoking the hook.
  
  Finished update_status module, so that it effectively talks to getflightpath.com,
  to discover which modules need updates.
  

2013-03-09
  Fixed unclosed <a> tag in install.php.
  
  Modified the places where call_user_func was being called with a referenced variable;
  changed it to a more PHP 5.4 friendly technique, so FP will be compatible with PHP 5.4.
  
  Updated hooks.api.php file to contain all of the hooks in FP, with explanations.
  

2013-03-08